--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header-content">
             <h1>Mustafa Jamshidi</h1>
-            <p>Computer Science Student & Part-time Software Developer</p>
+            <p>Computer Science Student & Part-time Software Engineer</p>
             <img src="./newyorkme2 copy.jpg" alt="Profile Photo"> <!-- Consider adding an 'alt' description for accessibility -->
             <div class="social-icons">
                 <!-- Consider adding 'rel="noopener noreferrer"' for security on target="_blank" links -->
@@ -56,18 +56,12 @@
             <h2>Projects</h2>
             <div class="project">
                 <h3>ShockShockers Dining</h3>
-                <p>Imagine a dining hall experience that feels like a personal nutritionist, right at your fingertips. That's exactly what the ShockShockers dinning project, spearheaded by myself, aims to achieve.
-                    the hustle and bustle of student life, deciding on a balanced meal can be a daunting task. This innovative solution transcends the conventional dining experience.
-                    Through the visionary leadership of mysefl, the team embarked on a journey to seamlessly integrate AI technology, turning it into a culinary virtuoso. 
-                    Whether you're a dedicated vegan seeking 1000 calories or an omnivore with a penchant for health, ShockShockers dinning crafts personalized meal plans tailored to your unique needs.
-                    It's not just an application; it's a culinary confidant, a trusted advisor in the pursuit of a balanced diet. Beyond the code, this project is a testament to teamwork, innovation,
-                     and  my leadership in shaping a healthier, more mindful dining experience for all.
-                <p>
+                <p>The ShockShockers dining project, led by myself, revolutionizes the dining experience. Using AI technology, we create personalized meal plans tailored to individual needs, whether you're a vegan or an omnivore. It's more than an app; it's a trusted culinary advisor for balanced nutrition. This project showcases teamwork, innovation, and my leadership in promoting a healthier dining experience.<p>
                 <a href="https://github.com/mustafajamis/ShockShockersDining">View Project</a>
             </div>
             <div class="project">
                 <h3> Dynamic Explorations in C++: Mandelbrot Set, Snake Game, and Unreal Engine Obstacle Assault</h3>
-                <p>Embarking on a comprehensive exploration of the C++ programming language, I undertook a series of projects that showcase a meticulous understanding of its intricacies. From delving into the mathematical wonders of the Mandelbrot set to crafting a classic Snake game with strong foundations in object-oriented design, each endeavor demonstrated a deep grasp of algorithmic thinking. Leveraging console interfaces and dynamic memory allocation, these projects provided engaging and interactive experiences. Additionally, a foray into game development using Unreal Engine 5 yielded the Obstacle Assault Game, exemplifying an integration of C++ expertise with advanced gaming functionalities. Throughout, I emphasized version control, clear code structure, and rigorous debugging, ensuring optimal functionality and maintainability. These projects collectively stand as a testament to my dedication to mastering C++, blending educational immersion with dynamic programming experiences.</p>
+                <p>I delved into C++ with projects like Mandelbrot set exploration and a Snake game, showcasing strong algorithmic thinking. Utilizing console interfaces and dynamic memory allocation, these projects offered interactive experiences. I also ventured into game development with Unreal Engine 5, creating the Obstacle Assault Game, integrating advanced C++ expertise. Emphasis on version control, clear code structure, and rigorous debugging ensured optimal functionality and maintainability. These projects demonstrate my dedication and mastery of C++.</p>
                 <a href="https://github.com/mustafajamis/MyProjects/tree/master">View Project</a> <!-- Add a valid link for Project Title 2 -->
             </div>
         </section>
