--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close-button" onclick="closeModal()">&times;</span>
-            <iframe src="./MxjamshidiResume.pdf"></iframe>
+            <iframe src="./MxjamshidiResume2.pdf"></iframe>
         </div>
     </div>
 
