adding new projects

--- a/index.html
+++ b/index.html
@@ -59,10 +59,23 @@
                 <p>The ShockShockers dining project, led by myself, revolutionizes the dining experience. Using AI technology, we create personalized meal plans tailored to individual needs, whether you're a vegan or an omnivore. It's more than an app; it's a trusted culinary advisor for balanced nutrition. This project showcases teamwork, innovation, and my leadership in promoting a healthier dining experience.<p>
                 <a href="https://github.com/mustafajamis/ShockShockersDining">View Project</a>
             </div>
+
             <div class="project">
-                <h3> Dynamic Explorations in C++: Mandelbrot Set, Snake Game, and Unreal Engine Obstacle Assault</h3>
-                <p>I delved into C++ with projects like Mandelbrot set exploration and a Snake game, showcasing strong algorithmic thinking. Utilizing console interfaces and dynamic memory allocation, these projects offered interactive experiences. I also ventured into game development with Unreal Engine 5, creating the Obstacle Assault Game, integrating advanced C++ expertise. Emphasis on version control, clear code structure, and rigorous debugging ensured optimal functionality and maintainability. These projects demonstrate my dedication and mastery of C++.</p>
-                <a href="https://github.com/mustafajamis/MyProjects/tree/master">View Project</a> <!-- Add a valid link for Project Title 2 -->
+           <h3> Perl to Python Code Converter using OpenAI's ChatGPT</h3>
+           <p>Simplify converting Perl code to Python using ChatGPT! This script automates the process just input your Perl code, and it generates and executes Python code.</p>
+           <a href="https://github.com/mustafajamis/HackathonProject"> View Project</a>
+            </div>
+
+            <div class="project">
+                <h3> Fun with C++ Games: Snake Adventures and Unreal Excitement</h3>
+                <p>Created a C++ Snake Game demonstrating programming and design skills. Explored Unreal Engine 5 for the Obstacle Assault Game, combining fundamental concepts with C++ proficiency.</p>
+                <a href="https://github.com/mustafajamis/MyProjects/tree/master">View Project</a>
+            </div>
+
+            <div class="project">
+                <h3> Exploring the Mandelbrot Set</h3>
+                <p>Unlock the secrets of C++ with my Mandelbrot Set project! This immersive journey delves deep into programming principles. Play with the code, adjust zoom levels, and experience the magic of C++ firsthand. It's a simple yet powerful exploration of programming mastery!</p>
+                <a href="https://github.com/mustafajamis/MyProjects/tree/master/Mandelbrot%20Project">View Project</a> 
             </div>
         </section>
     </main>
